--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>hii
-        welcome to my dangerous world hello
+        welcome to my dangerous world
     </h1>
 </body>
 </html>
